--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-navigation></app-navigation>
-<div class="container mt-3">
-  <div class="row">
-    <div class="col-12">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer class="text-center py-3 bg-dark text-muted mt-auto">
+  &copy; some kind of footer
+</footer>
