--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,8 +1,11 @@
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-    </p>
+<div *ngIf="product" class="card h-100">
+  <img [src]="product.image" class="card-img-top" [alt]="product.name" />
+  <div class="card-body d-flex flex-column">
+    <h5 class="card-title">{{ product.name }}</h5>
+    <p class="card-text">{{ product.description | textSlicer }}</p>
+    <div class="actions mt-auto d-flex justify-content-start">
+      <button class="btn btn-info mr-2">Button1</button>
+      <button class="btn btn-info">Button2</button>
+    </div>
   </div>
 </div>
