--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<section class="bg-dark py-5">
+  <div class="container-fluid">
+    <h2 class="mb-3 text-center text-white text-md-left">Featured Products:</h2>
+    <div class="row justify-content-center">
+      <div
+        class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
+        *ngFor="let product of featuredProducts"
+      >
+        <app-product-card [product]="product"></app-product-card>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-secondary py-5">
+  <div class="container-fluid">
+    <h2 class="mb-3 text-center text-white text-md-left">On Sale:</h2>
+    <div class="row justify-content-center">
+      <div
+        class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
+        *ngFor="let product of randomProducts"
+      >
+        <app-product-card [product]="product"></app-product-card>
+      </div>
+    </div>
+  </div>
+</section>
