--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,8 +1,8 @@
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+<div *ngIf="product" class="card">
+  <img [src]="product.image" class="card-img-top" [alt]="product.name">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-    </p>
+    <h5 class="card-title">{{ product.name }}</h5>
+    <p class="card-text">{{ product.description | textSlicer }}</p>
+    <button class="btn btn-primary">Kosárba</button>
   </div>
 </div>
