product-card.component.html javítva

--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -3,6 +3,8 @@
   <div class="card-body">
     <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">{{ product.description | textSlicer }}</p>
+    <p class="card-text">{{ product.stock}}</p>
+    <p class="card-text">{{ product.price}}</p>
     <button class="btn btn-primary">Kosárba</button>
   </div>
 </div>
