--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="product" class="card h-100">
   <img [src]="product.image" class="card-img-top" [alt]="product.name" />
-  <div class="card-body">
+  <div class="card-body d-flex flex-column">
     <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">{{ product.description | textSlicer }}</p>
     <p class="card-text">{{ product.stock }}</p>
     <p class="card-text">{{ product.price }}</p>
-    <button class="btn btn-primary">Kosárba</button>
+    <div class="actions mt-auto">
+      <button class="btn btn-primary">Kosárba</button>
+    </div>
   </div>
 </div>
