--- a/src/app/page/cat01/cat01.component.html
+++ b/src/app/page/cat01/cat01.component.html
@@ -1,1 +1,20 @@
-<p>cat01 works!</p>
+<section class="bg-dark py-5">
+  <div class="container-fluid">
+    <h2 class="mb-3 text-center text-white text-md-left">
+      Featured Products ({{ (currentCategory$ | async)?.name }}):
+    </h2>
+    <div class="row justify-content-center">
+      <div
+        class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
+        *ngFor="let product of products$ | async | featured"
+      >
+        <app-product-card [product]="product"></app-product-card>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-secondary py-5">
+  <div class="container-fluid">
+    <app-product-list [productList]="products$ | async"></app-product-list>
+  </div>
+</section>
