--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="bg-dark py-5">
   <div class="container-fluid">
     <h2 class="mb-3 text-center text-white text-md-left">Featured Products:</h2>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center d-none d-md-flex">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
         *ngFor="let product of featuredProducts"
@@ -10,11 +10,15 @@
       </div>
     </div>
   </div>
+  <app-cards-carousel
+    [products]="featuredProducts"
+    [carouselId]="'carousel1'"
+  ></app-cards-carousel>
 </section>
 <section class="bg-secondary py-5">
   <div class="container-fluid">
     <h2 class="mb-3 text-center text-white text-md-left">On Sale:</h2>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center d-none d-md-flex">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
         *ngFor="let product of randomProducts"
@@ -23,4 +27,9 @@
       </div>
     </div>
   </div>
+
+  <app-cards-carousel
+    [products]="randomProducts"
+    [carouselId]="'carousel2'"
+  ></app-cards-carousel>
 </section>
