--- a/src/app/common/product-list/product-list.component.scss
+++ b/src/app/common/product-list/product-list.component.scss
@@ -1,6 +1,6 @@
 .col-lg-five {
   @media only screen and (min-width: 960px) {
-    flex: 0 0 50%;
-    max-width: 20%;
+    flex: 0 0 20% !important;
+    max-width: 20% !important;
   }
 }
