WebShop név beállítva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
 </main>
 
 <footer class="text-center py-3 bg-dark text-muted mt-auto">
-  &copy; some kind of footer
+  &copy; SuperSet Shop
 </footer>
