--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,7 @@
 
-
-
 // *** FONTS *** //
-
+$logo__font: Cochin, Georgia, Times, 'Times New Roman', serif;
+$menu__font: 'Lucida Handwriting', Geneva, Verdana, sans-serif;
 
 
 // *** FONT SIZES ***//
@@ -13,11 +12,12 @@ $font-lg: 1.5rem;
 $font-xlg: 2.5rem;
 
 // *** COLORS *** //
-$nav: #fdcc52;
-
-
-
-
-// *** IMAGES *** //
-$logo: "/assets/image/logo.jpg";
-$header_background: "/assets/image/Scythe_bg.jpg";
+$nav__bg-color: rgba(250, 250, 250, 0.9);
+$nav__font-color: rgb(130, 130, 130);
+$nav__hover-font-color: rgb(0, 110, 255);
+$card__bg-color: rgba(250, 250, 250, 0.8);
+$card__shadow-color: rgba(0, 0, 0, 0.3);
+$btn__bg-color: rgb(200, 200, 200);
+$btn__bg-font: rgba(0, 0, 0);
+$btn__hover-font-color: rgb(0, 150, 250, 0.6);
+$products-group_font-color: rgb(0, 140, 250);
