--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,13 +1,28 @@
-<div *ngIf="product" class="card h-100 shadow-sm">
-  <img [src]="product.image" class="card-img-top p-5" [alt]="product.name" />
-  <div class="card-body d-flex flex-column">
-    <h3 class="text-center card-title">{{ product.name }}</h3>
-    <p class="card-text">{{ product.description | textSlicer }}</p>
-    <p class="card-text m-0">Játékidő:</p>
-    <p class="card-text">{{ product.playingtime }}</p>
-    <p class="card-text m-0">Ajánlott kor:</p>
-    <p class="card-text">{{ product.age }}</p>
-    <p class="card-text text-center">{{ product.price }}Ft</p>
-    <button class="btn btn-primary btn-lg btn-block mt-auto">Kosárba</button>
+<div *ngIf="product" class="col-12 h-100 card-product">
+  <div class="card-product__img-container">
+    <img [src]="product.image" class="card-product__img" [alt]="product.name" />
+  </div>
+  <div class="card-product__body h-90">
+    <h4 class="card-product__title">{{ product.name }}</h4>
+    <p class="card-product__descript">{{ product.description | textSlicer }}</p>
+    <div class="card-product__infos">
+      <p class="card-product__info m-0">
+        <i class="fa fa-user"></i>
+        {{ product.age }}
+      </p>
+      <p class="card-product__info m-0">
+        <i class="fa fa-clock-o"></i>
+        {{ product.playingtime }}
+      </p>
+      <p class="card-product__info m-0">
+        <i class="fa fa-users"></i>
+        {{ product.players }}
+      </p>
+    </div>
+    <p class="card-product__price">{{ product.price }}Ft</p>
+    <button class="card-product__btn mt-auto">
+      <i class="fa fa-cart-plus"></i>
+      Kosárba
+    </button>
   </div>
 </div>
