--- a/src/app/page/cat01/cat01.component.html
+++ b/src/app/page/cat01/cat01.component.html
@@ -1,11 +1,11 @@
-<section class="bg-dark py-5">
+<section class="py-5">
   <div class="container-fluid">
-    <h2 class="mb-3 text-center text-white text-md-left">
-      Featured Products ({{ (currentCategory$ | async)?.name }}):
+    <h2 class="mb-3 products">
+      Kiemelt termékek({{ (currentCategory$ | async)?.name }}):
     </h2>
     <div class="row justify-content-center">
       <div
-        class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
+        class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl mb-3"
         *ngFor="let product of products$ | async | featured"
       >
         <app-product-card [product]="product"></app-product-card>
@@ -13,7 +13,7 @@
     </div>
   </div>
 </section>
-<section class="bg-secondary py-5">
+<section class="col-12 py-5">
   <div class="container-fluid">
     <app-product-list [productList]="products$ | async"></app-product-list>
   </div>
