--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,6 +1,6 @@
-<section class="bg-dark py-5">
-  <div class="container-fluid">
-    <h2 class="mb-3 text-center text-white text-md-left">Featured Products:</h2>
+<section class="py-5">
+  <div class="mx-auto container-fluid">
+    <h2 class="mb-3 products">Kiemelt termékek</h2>
     <div class="row justify-content-center">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
@@ -11,9 +11,9 @@
     </div>
   </div>
 </section>
-<section class="bg-secondary py-5">
+<section class="py-5">
   <div class="container-fluid">
-    <h2 class="mb-3 text-center text-white text-md-left">On Sale:</h2>
+    <h2 class="mb-3 products">Akciós termékek</h2>
     <div class="row justify-content-center">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
