--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="py-5">
   <div class="mx-auto container-fluid">
     <h2 class="mb-3 products">Kiemelt termékek</h2>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center d-none d-md-flex">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
         *ngFor="let product of featuredProducts"
@@ -18,7 +18,7 @@
 <section class="py-5">
   <div class="container-fluid">
     <h2 class="mb-3 products">Akciós termékek</h2>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center d-none d-md-flex">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl mb-3"
         *ngFor="let product of randomProducts"
