--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -16,6 +16,7 @@
     padding-bottom: 10px;
     border-radius: 20px;
     margin: 15px auto;
+    display: flex;
     justify-content: center;
   }
 
