--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,7 +3,7 @@
     {{ appName }}
   </a>
   <button
-    class="navbar-toggler menu__btn"
+    class="navbar-toggler"
     type="button"
     data-toggle="collapse"
     data-target="#navbarSupportedContent"
@@ -11,12 +11,12 @@
     aria-expanded="false"
     aria-label="Toggle navigation"
   >
-    <span class="navbar-toggler-icon">
-      <i class="fa-bars"></i>
+    <span class="navbar-toggler-icon  menu__btn">
+      <i class="fa fa-bars"></i>
     </span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li
         *ngFor="let item of menuItems"
