--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -24,12 +24,19 @@
     font-size: $font-md;
     text-decoration: none;
     text-shadow: 1px 1px 1px black, 1px 1px 15px white;
-    padding-left: 15px;
+    padding-right: 15px;
     transition: all 0.2s ease-in-out;
 
     &:hover{
       text-decoration: none;
       color: $nav__hover-font-color;
     }
+  }
+
+  &__btn{
+    z-index: 5;
+    color: $nav__hover-font-color;
+    text-shadow: 1px 1px 1px black, 1px 1px 15px white;
+    font-size: $font-lg;
   }
 }
