--- a/src/app/common/product-list/product-list.component.scss
+++ b/src/app/common/product-list/product-list.component.scss
@@ -4,3 +4,11 @@
     max-width: 20% !important;
   }
 }
+
+.search-label {
+  width: 200% !important;
+
+  @media only screen and (max-width: 640px) {
+    width: 80vw !important;
+  }
+}
