--- a/src/app/common/cards-carousel/cards-carousel.component.scss
+++ b/src/app/common/cards-carousel/cards-carousel.component.scss
@@ -1,25 +1,22 @@
 .carousel .carousel-controls {
   position: absolute !important;
-  top: 40%;
+  top: 50%;
   left: 0;
   right: 0;
-  z-index: 100000 !important;
+  z-index: 2 !important;
+  opacity: 0.2;
+  transition: opacity 0.3s ease-in-out;
+}
+.carousel:hover .carousel-controls {
+  opacity: 1;
 }
 .carousel .carousel-control-next,
 .carousel .carousel-control-prev {
-  background-color: #000;
-  padding: 1rem;
+  background-color: steelblue;
   width: 50px;
   height: 50px;
   border-radius: 50%;
 }
-.carousel .carousel-control-next {
-  margin-right: 1.2rem !important;
-}
-.carousel .carousel-control-prev {
-  margin-left: 1.2rem !important;
-}
-
 .carousel .carousel-inner {
-  z-index: 99999 !important;
+  z-index: 1 !important;
 }
