card height modified

--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product" class="col-12 h-100 card-product">
+<div *ngIf="product" class="col-12 card-product">
   <div class="card-product__img-container">
     <img [src]="product.image" class="card-product__img" [alt]="product.name" />
   </div>
