product-page height fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-
-<main class="bg">
+<main class="bg h-100">
   <app-navigation></app-navigation>
   <router-outlet></router-outlet>
 </main>
-
 
 <footer class="text-center py-3 bg-dark text-muted mt-auto">
   &copy; SuperSet Shop
