--- a/src/app/page/product-page/product-page.component.html
+++ b/src/app/page/product-page/product-page.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5 min-vh-100">
+<div class="container py-5">
   <div class="card mb-3">
     <div class="card-body">
       <div class="row">
