bg scss class modified

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
-.bg{
+.bg {
   background-image: url("../assets/image/dice.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+
+  flex: 1;
 }
