--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<main class="bg h-100">
-  <app-navigation></app-navigation>
-  <router-outlet></router-outlet>
-</main>
+<div class="cont">
+  <main class="bg h-100">
+    <app-navigation></app-navigation>
+    <router-outlet></router-outlet>
+  </main>
 
-<footer class="text-center py-3 bg-dark text-muted mt-auto">
-  &copy; SuperSet Shop
-</footer>
+  <footer class="text-center py-3 bg-dark text-muted mt-auto">
+    &copy; SuperSet Shop
+  </footer>
+
+</div>
+
+
+
