--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,15 +2,8 @@
   <a class="menu__brand" routerLink="/">
     {{ appName }}
   </a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon  menu__btn">
       <i class="fa fa-bars"></i>
     </span>
@@ -18,13 +11,11 @@
 
   <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
-      <li
-        *ngFor="let item of menuItems"
-        class="nav-item  menu__link ml-5"
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-      >
+      <li *ngFor="let item of menuItems" class="nav-item  menu__link ml-5" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link menu__link" [routerLink]="item.link">{{ item.text }}</a>
+      </li>
+      <li class="nav-item  menu__link ml-5"><a routerLink="/admin" class="nav-link menu__link">Admin</a>
       </li>
     </ul>
   </div>
