--- a/src/app/page/data-editor/data-editor.component.html
+++ b/src/app/page/data-editor/data-editor.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="list">
+<ng-container>
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -19,8 +19,24 @@
               <th>Weight</th>
             </tr>
           </thead>
-          <tr *ngFor="let list of list">
+          <tr>
             <td>{{ list.id }}</td>
+            <td>{{ list.catId }}</td>
+            <td>{{ list.name }}</td>
+            <td>{{ list.description }}</td>
+            <td>{{ list.image }}</td>
+            <td>{{ list.price }}</td>
+            <td>{{ list.stock }}</td>
+            <td>{{ list.featured }}</td>
+            <td>{{ list.players }}</td>
+            <td>{{ list.playingtime }}</td>
+            <td>{{ list.age }}</td>
+            <td>{{ list.weight }}</td>
+            <td class="btn-group">
+              <button class="btn btn-info"><i class="fa fa-pencil"></i></button>
+              <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+              <button class="btn btn-success"><i class="fa fa-save"></i></button>
+            </td>
           </tr>
           <tbody>
           </tbody>
