get roducts in admin/data-editor components fixed

--- a/src/app/page/admin/admin.component.html
+++ b/src/app/page/admin/admin.component.html
@@ -1,4 +1,3 @@
-
-<app-data-editor [list]="list" ></app-data-editor>
-
-
+<div *ngIf="list$ | async as list">
+  <app-data-editor [list]="list"></app-data-editor>
+</div>
