--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,8 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  max-width: 1700px;
-  margin: 0 auto;
+  // max-width: 1700px;
+  // margin: 0 auto;
+
+  flex: 1;
 }
