--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -14,7 +14,6 @@
     height: 100%;
   }
 
-
   &__img-container {
     width: 100%;
     background-color: white;
@@ -89,7 +88,7 @@
     padding: 10px;
     border-radius: 10px;
     color: $btn__bg-font;
-    opacity: .8;
+    opacity: 0.8;
     transition: all 0.2s ease-in-out;
 
     & i {
