--- a/src/app/page/data-editor/data-editor.component.html
+++ b/src/app/page/data-editor/data-editor.component.html
@@ -34,15 +34,17 @@
             <td>{{ list.weight }}</td>
             <td class="btn-group">
               <button class="btn btn-info"><i class="fa fa-pencil"></i></button>
-              <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
-              <button class="btn btn-success"><i class="fa fa-save"></i></button>
+              <button class="btn btn-danger">
+                <i class="fa fa-trash"></i>
+              </button>
+              <button class="btn btn-success">
+                <i class="fa fa-save"></i>
+              </button>
             </td>
           </tr>
-          <tbody>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
     </div>
   </div>
-
 </ng-container>
