add info button

--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -20,9 +20,13 @@
       </p>
     </div>
     <p class="card-product__price">{{ product.price }}Ft</p>
-    <button class="card-product__btn mt-auto">
-      <i class="fa fa-cart-plus"></i>
-      Kosárba
-    </button>
+    <div class="btn-group d-flex mt-auto w-100" role="group">
+      <button (click)="jumpToProduct(product)" class="card-product__btn mt-auto">
+        <i class="fa fa-info"></i>
+      </button>
+      <button class="card-product__btn mt-auto">
+        <i class="fa fa-cart-plus"></i>
+      </button>
+    </div>
   </div>
 </div>
