--- a/src/app/page/product-page/product-page.component.html
+++ b/src/app/page/product-page/product-page.component.html
@@ -1,33 +1,24 @@
 <div class="container py-5">
-  <div class="card mb-3">
+  <div *ngFor="let product of product$ | async" class="card mb-3">
+    <p>{{ product.id }}</p>
     <div class="card-body">
       <div class="row">
         <div class="col-12 col-md-6">
-          <h5 class="card-title">{{ (product$ | async)?.name }}</h5>
+          <h5 class="card-title">{{ product.name }}</h5>
           <h6 class="card-subtitle mb-2 text-muted">
-            {{ (product$ | async)?.description }}
+            {{ product.description }}
           </h6>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              {{ (product$ | async)?.price | currency: "HUF" }}
+              {{ product.price | currency: "HUF" }}
             </li>
-            <li class="list-group-item">
-              {{ (product$ | async)?.playingtime }}
-            </li>
-            <li class="list-group-item">
-              {{ (product$ | async)?.age }}
-            </li>
-            <li class="list-group-item">
-              {{ (product$ | async)?.players }}
-            </li>
+            <li class="list-group-item">{{ product.playingtime }}</li>
+            <li class="list-group-item">{{ product.age }}</li>
+            <li class="list-group-item">{{ product.players }}</li>
           </ul>
         </div>
         <div class="col-12 col-md-6">
-          <img
-            class="img-fluid"
-            [src]="(product$ | async)?.image"
-            [alt]="(product$ | async)?.name"
-          />
+          <img class="img-fluid" [src]="product.image" [alt]="product.name" />
         </div>
       </div>
     </div>
