product-page modified

--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -21,7 +21,10 @@
     </div>
     <p class="card-product__price">{{ product.price }}Ft</p>
     <div class="btn-group d-flex mt-auto w-100" role="group">
-      <button (click)="jumpToProduct(product)" class="card-product__btn mt-auto">
+      <button
+        (click)="jumpToProduct(product)"
+        class="card-product__btn mt-auto"
+      >
         <i class="fa fa-info"></i>
       </button>
       <button class="card-product__btn mt-auto">
