--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+.fa-check {
+  color: green;
+}
+
+.fa-circle {
+  color: red;
+}
