--- a/src/app/page/data-editor/data-editor.component.html
+++ b/src/app/page/data-editor/data-editor.component.html
@@ -1,58 +1,94 @@
 <ng-container *ngIf="list">
-  <div class="container-fluid">
-    <div class="form-group d-flex justify-content-between">
-      <div class="form-group">
-        <label for="searchKey" class="form-control mt-5">Szűrés jellemzők alapján:</label>
-        <select name="searchKey" id="searchKey" [(ngModel)]="searchKey" class="form-control">
-          <option *ngFor="let key of keys" [value]="key">{{key | uppercase}}</option>
+  <div class="container">
+    <div class="form-group d-md-flex justify-content-center">
+      <div class="form-group mr-md-5">
+        <label for="searchKey" class="form-control mt-5"
+          >Szűrés jellemzők alapján:</label
+        >
+        <select
+          name="searchKey"
+          id="searchKey"
+          [(ngModel)]="searchKey"
+          class="form-control"
+        >
+          <option *ngFor="let key of keys" [value]="key">
+            {{ key | uppercase }}
+          </option>
         </select>
-        <input type="text" class="form-control mt-1" [(ngModel)]="searchPhrase">
+        <input
+          type="text"
+          class="form-control mt-1"
+          [(ngModel)]="searchPhrase"
+        />
       </div>
       <div class="form-group">
-        <label for="sortKey" class="form-control mt-5">Rendezés jellemzők alapján:</label>
-        <select name="sortKey" id="sortKey" [(ngModel)]="sortKey" class="form-control">
-          <option *ngFor="let key of keys" [value]="key">{{key | uppercase}}</option>
+        <label for="sortKey" class="form-control mt-5"
+          >Rendezés jellemzők alapján:</label
+        >
+        <select
+          name="sortKey"
+          id="sortKey"
+          [(ngModel)]="sortKey"
+          class="form-control"
+        >
+          <option *ngFor="let key of keys" [value]="key">
+            {{ key | uppercase }}
+          </option>
         </select>
       </div>
     </div>
-<div class="row">
-
-
-    <table class="table table-responsive table-striped mt-3">
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Category Id</th>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Image</th>
-          <th>Price</th>
-          <th>Stock</th>
-          <th>Featured</th>
-          <th>Players</th>
-          <th>Playingtime</th>
-          <th>Age</th>
-          <th>Weight</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let list of list | filter:searchPhrase:searchKey | sorter:sortKey">
-
-          <td *ngFor="let key of keys">
-            <input [name]="key" [disabled]="key==='id'" [(ngModel)]="list[key]" type="text" class="form-control">
-          </td>
-          <td class="btn-group">
-            <button class="btn btn-info" (click)="editItem(list)"><i class="fa fa-save"></i></button>
-            <button class="btn btn-danger" (click)="deleteItem(list)">
-              <i class="fa fa-trash"></i>
-            </button>
-            <button class="btn btn-success" (click)="undo()">
-              <i class="fa fa-undo"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <table class="table table-responsive table-striped mt-3">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Category Id</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Image</th>
+            <th>Price</th>
+            <th>Stock</th>
+            <th>Featured</th>
+            <th>Players</th>
+            <th>Playingtime</th>
+            <th>Age</th>
+            <th>Weight</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="
+              let list of list
+                | filter: searchPhrase:searchKey
+                | sorter: sortKey
+            "
+          >
+            <td *ngFor="let key of keys">
+              <input
+                [name]="key"
+                [disabled]="key === 'id'"
+                [(ngModel)]="list[key]"
+                type="text"
+                class="form-control"
+              />
+            </td>
+            <td class="btn-group">
+              <button class="btn btn-info" (click)="editItem(list)">
+                <i class="fa fa-save"></i>
+              </button>
+              <button class="btn btn-danger" (click)="deleteItem(list)">
+                <i class="fa fa-trash"></i>
+              </button>
+              <button class="btn btn-success" (click)="undo()">
+                <i class="fa fa-undo"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </ng-container>
